--- a/clover/src/app/components/car/rent-a-car/rent-a-car.component.css
+++ b/clover/src/app/components/car/rent-a-car/rent-a-car.component.css
@@ -22,7 +22,8 @@ body {
    height: 80px;
    z-index: 997;
    transition: all 0.5s;
-   margin-top: 5%;
+   margin-top: 0%;
+   position: fixed;
  }
  
  #header.header-scrolled {
@@ -229,8 +230,8 @@ body {
  #hero {
    width: 100%;
    height: 70vh;
-   margin-top: 5%;
    margin-bottom: 42%;
+   margin-top: 10%;
  }
  
  #hero h1 {
@@ -337,8 +338,7 @@ body {
 
 
  .about{
-   margin-bottom: 26%;
-   margin-bottom: 32%;
+   margin-bottom: 60%;
  }
 
 
@@ -418,94 +418,126 @@ body {
   margin-top: -35%;
 }
 
-
-.main-agileinfo{
-  margin-left:0%;
-  width: 300px;
-  }
-  
-  .resp-tabs-list {
-      width: 100%;
-      height: 100%;
-      padding: 17px 20px;
-      box-sizing: border-box;
-      font-size: 14px;
-      font-weight: 700;
-      color: #fff;
-      text-transform: uppercase;
-      border: none;
-      background-image: -moz-linear-gradient(to left, #74ebd5, #9face6);
-      background-image: -ms-linear-gradient(to left, #74ebd5, #9face6);
-      background-image: -o-linear-gradient(to left, #74ebd5, #9face6);
-      background-image: -webkit-linear-gradient(to left, #74ebd5, #9face6);
-      background-image: linear-gradient(to left, #74ebd5, #9face6); 
-      border-radius: 10px;
-      border-bottom-left-radius: 0%;
-      border-bottom-right-radius: 0%;
-  }
-
-  form{
-    background:rgba(208, 215, 218, 0.8);
-    padding: 25px;
-    border-radius: 10px;
-    border-top-left-radius: 0%;
-    border-top-right-radius: 0%;
-    }
-
-    h3 {
-      font-size: 16px;
-      color:#fff;
-      margin-bottom: 7px;
-      }
-      
-      .from,.to,.date,.depart,.return{
-          float:left;
-          
-      }
-      
-      .from,.to,.date{
-      margin-bottom:20px;
-      
-      }
-      
-      input[type="text"]{
-      padding:10px;
-      width:93%;
-      float:left;
-      }
-      
-      input#datepicker,input#datepicker1,input#datepicker2,input#datepicker3 {
-      width: 85%;
-      margin-bottom:10px;
-      }
-      
-      
-      
-      .form-submit {
-          width: 100%;
-          border-radius: 5px;
-          -moz-border-radius: 5px;
-          -webkit-border-radius: 5px;
-          -o-border-radius: 5px;
-          -ms-border-radius: 5px;
-          padding: 17px 20px;
-          box-sizing: border-box;
-          font-size: 14px;
-          font-weight: 700;
-          color: #fff;
-          text-transform: uppercase;
-          border: none;
-          background-image: -moz-linear-gradient(to left, #74ebd5, #9face6);
-          background-image: -ms-linear-gradient(to left, #74ebd5, #9face6);
-          background-image: -o-linear-gradient(to left, #74ebd5, #9face6);
-          background-image: -webkit-linear-gradient(to left, #74ebd5, #9face6);
-          background-image: linear-gradient(to left, #74ebd5, #9face6); 
-      }
  
 
 .table{
   width: 80%;
   margin-left: 20%;
+}
+
+.container{
+  width: 120%;
+  left: 0;
+}
+
+.div1{
+  background-color: rgba(234, 247, 246, 0.808);
+  width: 530px;
+  height: 145px;
+  border-radius: 10px;
+  position: relative;
+  display: inline-block;
+}
+.div2{
+  position: absolute;
+  left: 14px;
+  top: 14px;
+}
+.div3From{
+  font-family: "Lucida sole";
+  font-size: 150%;
+  position: absolute;
+  left: 210px;
+  top: 75px;
+}
+div.image {
+  position: absolute;
+  width: 200px;
+  height: 100px;
+  left: 0;
+  top: 12px;
+ 
+}
+.div4{
+  position: absolute;
+  right: 14px;
+  top: 14px;
+}
+.div5To{
+  font-family: "Lucida sole";
+  font-size: 150%;
+  position: absolute;
+  left: 210px;
+  top: 25px;
+}
+
+.div6To{
+  font-family: "Lucida sole";
+  font-size: 150%;
+  position: absolute;
+  left: 210px;
+  top: 51px;
+}
+.divName{
+  font-family: "Impact";
+  font-size: 130%;
+  position: absolute;
+  left: 210px;
+  
+}
+.btn{
+  position: absolute;
+  right: 10px;
+  bottom: 3px;
+}
+.myButton {
+box-shadow: 0px 1px 0px 0px #f0f7fa;
+background:linear-gradient(to bottom, #33bdef 5%, #019ad2 100%);
+background-color:#33bdef;
+border-radius:11px;
+border:1px solid #057fd0;
+display:inline-block;
+cursor:pointer;
+color:#ffffff;
+font-family:Arial;
+font-size:15px;
+font-weight:bold;
+padding:9px 24px;
+text-decoration:none;
+text-shadow:0px -1px 0px #5b6178;
+}
+.myButton:hover {
+background:linear-gradient(to bottom, #019ad2 5%, #33bdef 100%);
+background-color:#019ad2b6;
+}
+.myButton:active {
+position:relative;
+top:1px;
+}
+
+#style-22{
+  overflow: auto;
+   
+}
+#style-2::-webkit-scrollbar-track{
+border-radius: 12px;
+background-color: transparent;
+
+}
+#style-2::-webkit-scrollbar{
+  width: 12px;
+background-color: transparent;
+
+}
+#style-2::-webkit-scrollbar-thumb{
+  border-radius: 10px;
+  background-color: #673946;
+}
+
+
+.cars{
+  margin-left: 17%;
+  position: absolute;
 }
 
 
@@ -668,3 +700,250 @@ body {
      transform: rotate(360deg);
    }
  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ .section {
+	position: relative;
+	height: 100vh;
+}
+
+.section .section-center {
+	position: absolute;
+	top: 30%;
+	left: 10px  ;
+  right: 36%;
+  width: 600px;
+	-webkit-transform: translateY(-50%);
+	transform: translateY(-50%);
+}
+
+
+
+.booking-form {
+	background: rgba(150, 161, 168, 0.7);
+	padding: 10px;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+  width: 80%;
+  margin-left: 10%;
+  
+}
+
+.booking-form .form-group {
+	position: relative;
+	margin-bottom: 20px;
+}
+
+.booking-form .form-control {
+	background-color: #fff;
+	height: 50px;
+	color: #191a1e;
+	border: none;
+	font-size: 16px;
+	font-weight: 400;
+	-webkit-box-shadow: none;
+	box-shadow: none;
+	border-radius: 40px;
+	padding: 3px 2px;
+}
+
+.booking-form .form-control::-webkit-input-placeholder {
+	color: rgba(82, 82, 84, 0.4);
+}
+
+.booking-form .form-control:-ms-input-placeholder {
+	color: rgba(82, 82, 84, 0.4);
+}
+
+.booking-form .form-control::placeholder {
+	color: rgba(82, 82, 84, 0.4);
+}
+
+.booking-form input[type="date"].form-control:invalid {
+	color: rgba(82, 82, 84, 0.4);
+}
+
+.booking-form select.form-control {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+}
+
+.booking-form select.form-control+.select-arrow {
+	position: absolute;
+	right: 10px;
+	bottom: 6px;
+	width: 32px;
+	line-height: 32px;
+	height: 32px;
+	text-align: center;
+	pointer-events: none;
+	color: rgba(0, 0, 0, 0.3);
+  font-size: 14px;
+}
+
+.booking-form select.form-control+.select-arrow:after {
+	content: '\279C';
+	display: block;
+	-webkit-transform: rotate(90deg);
+  transform: rotate(90deg);
+  
+}
+
+.booking-form .form-label {
+	display: block;
+	margin-left: 20px;
+	margin-bottom: 5px;
+	font-weight: 400;
+	text-transform: uppercase;
+	line-height: 24px;
+	height: 24px;
+	font-size: 12px;
+	color: #fff;
+}
+
+.booking-form .form-checkbox input {
+	position: absolute !important;
+	margin-left: -9999px !important;
+	visibility: hidden !important;
+}
+
+.booking-form .form-checkbox label {
+	position: relative;
+	padding-top: 4px;
+	padding-left: 30px;
+	font-weight: 400;
+	color: #fff;
+}
+
+.booking-form .form-checkbox label+label {
+	margin-left: 15px;
+}
+
+.booking-form .form-checkbox input+span {
+	position: absolute;
+	left: 2px;
+	top: 4px;
+	width: 20px;
+	height: 20px;
+	background: #fff;
+	border-radius: 50%;
+}
+
+.booking-form .form-checkbox input+span:after {
+	content: '';
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	width: 0px;
+	height: 0px;
+	border-radius: 50%;
+	background-color: #f23e3e;
+	-webkit-transition: 0.2s all;
+	transition: 0.2s all;
+	-webkit-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+}
+
+.booking-form .form-checkbox input:not(:checked)+span:after {
+	opacity: 0;
+}
+
+.booking-form .form-checkbox input:checked+span:after {
+	opacity: 1;
+	width: 10px;
+	height: 10px;
+}
+
+.booking-form .form-btn {
+	margin-top: 27px;
+}
+
+.conteiner{
+    margin-left: 39%;
+    margin-right: 0%;
+    margin-top: -46%;
+    height: 50%;
+    width: 60%;
+    padding: 20px;
+    background: #fff;
+    background: rgba(0, 0, 0, 0.3);
+    padding: 25px;
+    border-radius: 10px;
+}
+.conteiner2{
+  position: absolute;
+right: 15px;
+top:85px;
+  height: 41%;
+  width: 60%;
+  padding: 20px;
+  background: #fff;
+  background: rgba(0, 0, 0, 0.3);
+  padding: 25px;
+  border-radius: 10px;
+}
+.conteiner3{
+  position: absolute;
+  right: 15px;
+  top:327.5%;
+  height: 80%;
+  width: 80%;
+  margin-right: 8.9%;
+  padding: 20px;
+  background: #fff;
+  background: rgba(150, 161, 168, 0.7);
+  padding: 25px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.booking-form .form-btn {
+	margin-top: 27px;
+}
+
+.booking-form .submit-btn {
+	color: #fff;
+	background-color: #0e92df;
+	font-weight: 400;
+	height: 50px;
+	font-size: 14px;
+	border: none;
+	width: 100%;
+	border-radius: 40px;
+	text-transform: uppercase;
+	-webkit-transition: 0.2s all;
+	transition: 0.2s all;
+}
+
+.booking-form .submit-btn:hover,
+.booking-form .submit-btn:focus {
+	opacity: 0.9;
+}
