--- a/clover/src/app/components/pomocna/pomocna.component.html
+++ b/clover/src/app/components/pomocna/pomocna.component.html
@@ -115,5 +115,76 @@
                       </div>
                     </div>
                   </div>
+
+
+
+                  <div  class="div1">
+
+                        <div class="div2">22.2.2022</div>
+                        <div class="div3From">Belgrade</div>
+                       
+                        <div class="div4">21.4.2084</div>
+                        <div class="div5To">Paris</div>
+                        <div class="divName">WizzAir</div>
+                        <div class="btn">
+                        
+                    </div>
+                    </div>
+                  
+
+                  <div class="conteiner3" >
+ <p>choose seat</p>
+                   <div class="cl1">   
+                    <div class="seat"></div>
+                    <div class="seat"></div>
+                    <div class="seat"></div>
+                    <div class="seat"></div>
+                    <div class="seat"></div>
+                    <div class="seat"></div>
+                    <div class="seat"></div>
+                    <div class="seat"></div>
+                    <div class="seat"></div>
+
+                  </div>
+                  <div class="cl2">
+                        <div class="seat"></div>
+                        <div class="seat"></div>
+                        <div class="seat"></div>
+                        <div class="seat"></div>
+                        <div class="seat"></div>
+                        <div class="seat"></div>
+                        <div class="seat"></div>
+                        <div class="seat"></div>
+                        <div class="seat"></div>
+
+                  </div>
+                  <div class="cl3">   
+                        <div class="seat"></div>
+                        <div class="seat"></div>
+                        <div class="seat"></div>
+                        <div class="seat"></div>
+                        <div class="seat"></div>
+                        <div class="seat"></div>
+                        <div class="seat"></div>
+                        <div class="seat"></div>
+                        <div class="seat"></div>
+    
+                      </div>
+                      <div class="cl4">
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+                            <div class="seat"></div>
+    
+                      </div>
+                      <div class="btn33">
+                      <button class="myButton33">PAY</button>
+                    </div>
+                </div>
         </div>
     </body>
