--- a/clover/src/app/components/flights/flights.component.html
+++ b/clover/src/app/components/flights/flights.component.html
@@ -105,12 +105,12 @@
 											  <div class="front" style="background-image: url(https://unsplash.it/500/500/)">
 												  <div class="inner">
 													  <p>Wizzair</p>
-										<span>Lorem ipsum</span>
+										<span>Hungary</span>
 												  </div>
 											  </div>
 											  <div class="back">
 												  <div class="inner">
-													<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+													<p>Wizz Air, legally incorporated as Wizz Air Hungary Ltd.and stylised as W!ZZ Air,is a Hungarian low-cost airline with its head office in Budapest.</p>
 												  </div>
 											  </div>
 										  </div>
@@ -121,12 +121,12 @@
 											  <div class="front" style="background-image: url(https://unsplash.it/502/502/)">
 												  <div class="inner">
 													  <p>Airserbia</p>
-										<span>Lorem ipsum</span>
+										<span>Serbia</span>
 												  </div>
 											  </div>
 											  <div class="back">
 												  <div class="inner">
-													  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+													  <p>AirSerbia is the flag carrier of Serbia. The company's headquarters is located in Belgrade, Serbia,Nikola Tesla Airport</p>
 												  </div>
 											  </div>
 										  </div>
@@ -137,12 +137,12 @@
 											<div class="front" style="background-image: url(https://unsplash.it/502/502/)">
 												<div class="inner">
 													<p>Rayanair</p>
-									  <span>Lorem ipsum</span>
+									  <span>Irish</span>
 												</div>
 											</div>
 											<div class="back">
 												<div class="inner">
-													<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+													<p>Ryanair is an Irish budget airline founded in 1984, Dublin, with its primary operational bases at Dublin and London Stansted airports</p>
 												</div>
 											</div>
 										</div>
