--- a/clover/src/app/components/company-profile/company-profile.component.css
+++ b/clover/src/app/components/company-profile/company-profile.component.css
@@ -692,3 +692,160 @@ opacity: 0.9;
     margin: 0 0 2rem 0;
   }
 }
+.inp{
+   
+  border-radius: 10px;
+  background: #ffffffce;
+}
+.inp1{
+  position: absolute;;
+  top: 0;
+}
+.inp2{
+  position: absolute;;
+  top: 0;
+  left:220px;
+}
+.inp3{
+  position: absolute;;
+  top: 0;
+  left:420px;
+}
+.slctComp{
+  position: absolute;;
+  top: 0;
+  height: 20%;
+  left:420px;
+}
+.button1 {
+  background-color: rgba(255, 255, 255, 0.774);
+  color: black;
+  border: 3px solid rgba(87, 142, 224, 0.938); /* Green */
+  border-radius: 10px;
+}
+.btn11{
+  position: absolute;;
+  top: 0;
+  height: 100px;
+  
+  right: 100px;
+}
+.conteiner3{
+  position: absolute;
+right: 400px;
+top:455px;
+  height: 40%;
+  width: 55%;
+  padding: 20px;
+  background: #fff;
+  background: rgba(0, 0, 0, 0.3);
+  padding: 25px;
+  border-radius: 10px;
+}
+.main{
+  background: chocolate;
+}
+
+
+.div1{
+  background-color: rgba(255, 255, 255, 0.808);
+  width: 1000px;
+  height: 145px;
+  top:10px;
+  border-radius: 10px;
+  position: relative;
+
+  
+}
+.div2{
+  position: absolute;
+  left: 14px;
+  top: 14px;
+}
+.div3From{
+  font-family: "Lucida Console";
+  font-size: 150%;
+  position: absolute;
+  left: 14px;
+  top: 54px;
+}
+div.image {
+  position: absolute;
+  width: 530px;
+  height: 100px;
+  left: 250px;
+  top: 12px;
+  content:url(../flights/avio.png);
+ 
+}
+.image2 {
+  position: absolute;
+  width: 530px;
+  height: 100px;
+  left: 20px;
+  top: 12px;
+  content:url(../company-profile/1200px-Wizz_Air_logo_2015.svg.png);
+ 
+}
+.div4{
+  position: absolute;
+  right: 14px;
+  top: 14px;
+}
+.div5To{
+  font-family: "Lucida Console";
+  font-size: 150%;
+  position: absolute;
+  right: 34px;
+  top: 54px;
+}
+.divName{
+  font-family: "Impact";
+  font-size: 150%;
+  position: absolute;
+  left: 480px;
+  top: 14px;
+  
+}
+.btn2{
+  position: absolute;
+  right: 34px;
+  bottom: 3px;
+}
+.myButton2 {
+box-shadow: 0px 1px 0px 0px #f0f7fa;
+background:linear-gradient(to bottom, #33bdef 5%, #019ad2 100%);
+background-color:#33bdef;
+border-radius:11px;
+border:1px solid #057fd0;
+display:inline-block;
+cursor:pointer;
+color:#ffffff;
+font-family:Arial;
+font-size:15px;
+font-weight:bold;
+padding:9px 24px;
+text-decoration:none;
+text-shadow:0px -1px 0px #5b6178;
+}
+#style-22{
+  overflow: auto;
+   
+}
+.conteinter4{
+  position: relative;
+  right: 15px;
+  top:0px;
+    height: 41%;
+    width: 80%;
+    padding: 20px;
+    background: #fff;
+    background: rgba(0, 0, 0, 0.3);
+    padding: 25px;
+    border-radius: 10px;
+}
+.about{
+  position: absolute;
+  top:150px;
+  width: 700px;
+}
