#AB15 - Filter Cars

--- a/clover/src/app/components/car/car.component.html
+++ b/clover/src/app/components/car/car.component.html
@@ -28,7 +28,7 @@
               <input class="datepicker" id="return" type="text" placeholder="31 Jan 2020" />
             </div>
             <div class="input-field fifth-wrap">
-              <button class="btn-search" type="button">SEARCH</button>
+              <button class="btn-search" type="button" (click)="filterServices()">SEARCH</button>
             </div>
           </div>
         </form>
