--- a/clover/src/app/components/car/rent-a-car/rent-a-car.component.html
+++ b/clover/src/app/components/car/rent-a-car/rent-a-car.component.html
@@ -72,7 +72,7 @@
               <div class="col-md-3">
                 <div class="form-group">
                   <span class="form-label">Start Location</span>
-                  <input class="form-control" type="text" placeholder="Start Location">
+                  <input class="form-control" type="text" placeholder="Start Location" id="startLocationFilter">
                 </div>
               </div>
 
@@ -134,7 +134,7 @@
               
               <div class="col-md-2">
                 <div class="form-btn">
-                  <button routerLink="/book-a-flight" class="submit-btn">Show Cars</button>
+                  <button class="submit-btn" (click)="filterCars()">Show Cars</button>
                 </div>
               </div>
             </div>
@@ -143,27 +143,20 @@
 
   
     
-          <div class="conteiner3" id="style-22">
-            <div *ngFor="let car of allCars" class="div1">
-                <div class="image" style="content:url({{car.imageUrl}})"></div>
-                <div class="divName">{{car.serviceName}}</div>
-                <div class="div5To">Brand: {{car.brand}}</div>
-                <div class="div6To">Model: {{car.model}}</div>
-                <div class="div3From">{{car.location}}</div>
-                
-                
-                
-                <div class="btn">
-                <button class="myButton">Rent {{car.pricePerDay}}$</button>
-              </div>
-              </div>
-          </div>
+          
 </section>
 
 
 
-
-
+<div class="conteiner3" id="style-22">
+<div [hidden]="filtredCars.length !== 0">
+  <hr/>
+  <h5 style="text-align: center;">Trenutno nema dostupnih vozila koja zadovoljavaju zadate parametre.</h5>
+</div>
+<div [hidden]="filtredCars.length === 0">
+  <app-car-filter [filtredCars]="filtredCars"></app-car-filter>
+</div>
+</div>
 
 
 
