--- a/clover/src/app/components/car/rent-a-car/rent-a-car.component.html
+++ b/clover/src/app/components/car/rent-a-car/rent-a-car.component.html
@@ -114,13 +114,13 @@
               
               <div class="col-md-3">
                 <div class="form-group">
-                  <span class="form-label">End Date</span>
-                  <input class="form-control" type="text" placeholder="End Location">
+                  <span class="form-label">End Location</span>
+                  <input class="form-control" type="text" placeholder="End Location" id="endLocationFilter">
                 </div>
               </div>
               <div class="col-md-3">
                 <div class="form-group">
-                  <span class="form-label">Start Location</span>
+                  <span class="form-label">End Date</span>
                   <input class="form-control" type="date" required>
                 </div>
               </div>
@@ -128,7 +128,7 @@
               <div class="col-md-4">
                 <div class="form-group">
                   <span class="form-label">Price</span>
-                  <input class="form-control" style="width: 35%;" type="text" placeholder="Price">
+                  <input class="form-control" style="width: 35%;" type="number" placeholder="Price" id="carMaxPerDayPriceFilter">
                 </div>
               </div>
               
