--- a/clover/src/app/components/sing-in/sing-in.component.html
+++ b/clover/src/app/components/sing-in/sing-in.component.html
@@ -43,7 +43,7 @@
 
                     <div class="d-flex justify-content-around">
                         <div>
-                            <a href="">Remember me</a>
+                            <a href="" (click)=becomeAAdmin()>Remember me</a>
                         </div>
                         <div> 
                             <a href="">Forgot password?</a>
