--- a/clover/src/app/components/car/car.component.html
+++ b/clover/src/app/components/car/car.component.html
@@ -33,13 +33,28 @@
             <div class="input-field fifth-wrap">
               <button class="btn-search" type="button" (click)="filterServices()">SEARCH</button>
             </div>
-            
           </div>
         </form>
+
+        <div class="admin">
+          <div class="s002" >
+            <form>
+              <div class="inner-form">
+                <div class="input-field fifth-wrap">
+                  <p style="color:lavenderblush; margin-left: 35%;"> Admin Services</p>
+                  <div class="input-field fifth-wrap">
+                    <button class="btn-search" type="button" routerLink="/car/add-rent-a-car">Add</button>
+                    <button class="btn-search" type="button" routerLink="/car/add-rent-a-car">Change</button>
+                  </div>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+
       </div>
 
-      <a routerLink="/car/add-rent-a-car">Dodaj Service</a>
-
+      
 
       <div [hidden]="filtredRentServices.length !== 0">
         <hr/>
