#AB16 - Car Admin

--- a/clover/src/app/components/car/rent-a-car/rent-a-car.component.html
+++ b/clover/src/app/components/car/rent-a-car/rent-a-car.component.html
@@ -139,21 +139,21 @@
               </div>
             </div>
           </form>
-
-
-          <div class="admin">
-            <div class="booking-form">
-              <form>
-                    <p style="color:lavenderblush; margin-left: 32%;"> Admin Services</p>
-                    <div class="input-field fifth-wrap">
-                      <button class="btn-search" type="button" routerLink="/car/add-rent-a-car">Add</button>
-                      <button class="btn-search" type="button" routerLink="/car/add-rent-a-car">Change</button>
-                    </div>
-              </form>
-            </div>
-          </div>
-
         </div>      
+</section>
+
+<section id="admin">
+  <div class="adminDiv">
+    <div class="booking-form">
+      <form style="margin-top: 17%;">
+            <p style="color:white;"> Admin Services</p>
+              <div class="form-btn">
+                <button class="submit-btn" type="button" routerLink="/car/add-car">Add</button>
+                <button class="submit-btn" type="button" routerLink="/car/add-car">Change</button>
+              </div>
+      </form>
+    </div>
+    </div>
 </section>
 
 
