--- a/clover/src/app/components/car/rent-a-car/rent-a-car.component.css
+++ b/clover/src/app/components/car/rent-a-car/rent-a-car.component.css
@@ -913,6 +913,12 @@ top:85px;
 }
 
 .admin{
-  margin-left: -75%;
-  margin-top: 20%;
+  position: absolute;
+  margin-left: 5%;
+  margin-top: 90%;
+}
+
+.adminDiv{
+  margin-top: 0%;
+  margin-left: 90%;
 }
