Search by flying from

--- a/clover/src/app/components/company-profile/company-profile.component.css
+++ b/clover/src/app/components/company-profile/company-profile.component.css
@@ -775,7 +775,7 @@ div.image {
   height: 100px;
   left: 250px;
   top: 12px;
-  content:url(../flights/avio.png);
+  content:url(//avio.png);
  
 }
 .image2 {
