--- a/clover/src/app/components/flights/search-flight/search-flight.component.html
+++ b/clover/src/app/components/flights/search-flight/search-flight.component.html
@@ -1,1 +1,24 @@
-<p>search-flight works!</p>
+<div class="conteiner3" id="style-22">
+    <div class="inp1"><input type="text" class="inp" name="min" placeholder="lowest price.."></div>
+    <div class="inp2"><input type="text" class="inp" name="max" placeholder="higest price.."></div>
+    <div class="inp3"><input type="text" class="inp" name="cnm" placeholder="company name.."></div>
+    <div class="btn11"><button class="button1">filter</button></div>
+    <!--<div class="slctComp"> <select class="inp" name="country">
+            <option value="australia">Wizzair</option>
+            <option value="canada">Rayanair</option>
+            <option value="usa">USA</option>
+          </select></div>-->
+        
+    <div *ngFor="let f of searchedFlights" class="div1">
+            <div class="div2">{{f.departing.toLocaleString()}}</div>
+            <div class="div3From">{{f.from}}</div>
+            <div class="image"></div>
+            <div class="div4">{{f.returning.toLocaleString()}}</div>
+            <div class="div5To">{{f.to}}</div>
+            <div class="divName">{{f.companyName}}</div>
+            <div class="btn">
+            <button routerLink="/payment" class="myButton">BOOK {{f.price}}$</button>
+        </div>
+        </div>
+
+</div>
