--- a/clover/src/app/components/flights/flights.component.html
+++ b/clover/src/app/components/flights/flights.component.html
@@ -26,7 +26,7 @@
 										<div class="col-md-6">
 											<div class="form-group">
 												<span class="form-label">Flying from</span>
-												<input class="form-control" type="text" placeholder="City or airport">
+												<input class="form-control" type="text" placeholder="City or airport" id="searchFromFilter">
 											</div>
 										</div>
 										<div class="col-md-6">
@@ -86,7 +86,7 @@
 										</div>
 										<div class="col-md-3">
 											<div class="form-btn">
-												<button routerLink="/book-a-flight" class="submit-btn">Show flights</button>
+												<button  class="submit-btn" (click)="filterServices()">Show flights</button>
 											</div>
 										</div>
 									</div>
@@ -155,27 +155,13 @@
 					</div>
 
 					<div class="conteiner3" id="style-22">
-							<div class="inp1"><input type="text" class="inp" name="min" placeholder="lowest price.."></div>
-							<div class="inp2"><input type="text" class="inp" name="max" placeholder="higest price.."></div>
-							<div class="inp3"><input type="text" class="inp" name="cnm" placeholder="company name.."></div>
-							<div class="btn11"><button class="button1">filter</button></div>
-							<!--<div class="slctComp"> <select class="inp" name="country">
-									<option value="australia">Wizzair</option>
-									<option value="canada">Rayanair</option>
-									<option value="usa">USA</option>
-								  </select></div>-->
-								
-							<div *ngFor="let f of allFlightss" class="div1">
-									<div class="div2">{{f.departing.toLocaleString()}}</div>
-									<div class="div3From">{{f.from}}</div>
-									<div class="image"></div>
-									<div class="div4">{{f.returning.toLocaleString()}}</div>
-									<div class="div5To">{{f.to}}</div>
-									<div class="divName">{{f.companyName}}</div>
-									<div class="btn">
-									<button routerLink="/payment" class="myButton">BOOK {{f.price}}$</button>
-								</div>
-								</div>
+						<div [hidden]="searchedFlights.length !== 0">
+							<hr/>
+							<h5 style="text-align: center;">Trenutno nema dostupnih LETOVA koja zadovoljavaju zadate parametre.</h5>
+						  </div>
+						  <div [hidden]="searchedFlights.length === 0">
+							<app-search-flight [searchedFlights]="searchedFlights"></app-search-flight>
+						  </div>
 
 					</div>
 
