--- a/clover/src/app/components/flights/search-flight/search-flight.component.css
+++ b/clover/src/app/components/flights/search-flight/search-flight.component.css
@@ -246,7 +246,7 @@ div.image {
   height: 100px;
   left: 250px;
   top: 12px;
-  content:url(../flights/avio.png);
+  content:url(//avio.png);
  
 }
 .div4{
