--- a/clover/src/app/components/company-profile/company-profile.component.html
+++ b/clover/src/app/components/company-profile/company-profile.component.html
@@ -127,4 +127,34 @@
                         </div>
                                     
             </div>
+
+
+            <div class="conteiner8">
+                        <div class="form-group">
+                                <span class="form-label" style="color:white;" >Flying from</span>
+                                <input class="form-control" type="text" placeholder="City or airport">
+                        </div>
+                        <div class="form-group">
+                              <span class="form-label" style="color:white;">Flyning to</span>
+                              <input class="form-control" type="text" placeholder="City or airport">
+                        </div>
+                         <div class="form-group">
+                            <span class="form-label" style="color:white;">Departing</span>
+                           <input class="form-control" type="date" required>
+                          </div>
+                          <div class="form-group">
+                                        <span class="form-label" style="color:white;">Returning</span>
+                                        <input class="form-control" type="date" required>
+                         </div>
+                         <div class="form-group">
+                                        <span class="form-label" style="color:white;">Price</span>
+                                        <input class="form-control" type="text" placeholder="Price">
+                        </div>
+                        <div class="form-group">
+                                        <span class="form-label" style="color:white;">Stops</span>
+                                        <input class="form-control" type="text" placeholder="Stops">
+                        </div>   
+
+                         <button  class="myButton2">ADD NEW FLIGHT</button>
+            </div>
         </body>
