--- a/clover/src/app/components/flights/flights.component.html
+++ b/clover/src/app/components/flights/flights.component.html
@@ -32,7 +32,7 @@
 										<div class="col-md-6">
 											<div class="form-group">
 												<span class="form-label">Flyning to</span>
-												<input class="form-control" type="text" placeholder="City or airport">
+												<input class="form-control" type="text" placeholder="City or airport" id="searchToFilter">
 											</div>
 										</div>
 									</div>
@@ -154,7 +154,7 @@
 						
 					</div>
 
-					<div class="conteiner3" id="style-22">
+					
 						<div [hidden]="searchedFlights.length !== 0">
 							<hr/>
 							<h5 style="text-align: center;">Trenutno nema dostupnih LETOVA koja zadovoljavaju zadate parametre.</h5>
@@ -163,7 +163,7 @@
 							<app-search-flight [searchedFlights]="searchedFlights"></app-search-flight>
 						  </div>
 
-					</div>
+					
 
 
 
